Intermittent Assertion failure: !CurrentThreadIsPerformingGC(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2956
Categories
(Core :: JavaScript Engine, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jonco)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=306168729&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/VZneBzv8TcGLsr8elgEjuA/runs/0/artifacts/public/logs/live_backing.log
[task 2020-06-12T22:24:14.587Z] 22:24:14 INFO - GECKO(8985) | [Child 9379: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 3 (0x7fdcfcfa5800) [pid = 9379] [serial = 3] [outer = 0x7fdd18593520]
[task 2020-06-12T22:24:14.808Z] 22:24:14 INFO - GECKO(8985) | [Parent 8985: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 0x7f532f86f800 == 14 [pid = 8985] [id = {37ee82fc-44be-4f60-b762-014d95964428}]
[task 2020-06-12T22:24:14.809Z] 22:24:14 INFO - GECKO(8985) | [Parent 8985: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 28 (0x7f533e20c870) [pid = 8985] [serial = 28] [outer = (nil)]
[task 2020-06-12T22:24:14.809Z] 22:24:14 INFO - GECKO(8985) | [Parent 8985: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 29 (0x7f5336e0cc00) [pid = 8985] [serial = 29] [outer = 0x7f533e20c870]
[task 2020-06-12T22:24:14.824Z] 22:24:14 INFO - GECKO(8985) | [Parent 8985, Main Thread] WARNING: NS_ENSURE_TRUE(rootFrame) failed: file /builds/worker/checkouts/gecko/dom/base/nsGlobalWindowOuter.cpp, line 4275
[task 2020-06-12T22:24:14.941Z] 22:24:14 INFO - GECKO(8985) | Assertion failure: !CurrentThreadIsPerformingGC(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2956
[task 2020-06-12T22:24:14.944Z] 22:24:14 INFO - GECKO(8985) | ExceptionHandler::GenerateDump cloned child 9454
[task 2020-06-12T22:24:14.946Z] 22:24:14 INFO - GECKO(8985) | ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2020-06-12T22:24:14.947Z] 22:24:14 INFO - GECKO(8985) | ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2020-06-12T22:24:15.086Z] 22:24:15 INFO - GECKO(8985) | [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-06-12T22:24:15.087Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.088Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.088Z] 22:24:15 INFO - GECKO(8985) | [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-06-12T22:24:15.110Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.111Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.112Z] 22:24:15 INFO - GECKO(8985) | [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-06-12T22:24:15.112Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.112Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.112Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.113Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.114Z] 22:24:15 INFO - GECKO(8985) | Exiting due to channel error.
[task 2020-06-12T22:24:15.170Z] 22:24:15 INFO - TEST-INFO | Main app process: exit 11
[task 2020-06-12T22:24:15.170Z] 22:24:15 ERROR - TEST-UNEXPECTED-FAIL | ShutdownLeaks | process() called before end of test suite
[task 2020-06-12T22:24:15.171Z] 22:24:15 INFO - TEST-INFO | Confirming we saw 26 DOCSHELL created and 1 destroyed log strings.
[task 2020-06-12T22:24:15.172Z] 22:24:15 ERROR - TEST-UNEXPECTED-FAIL | did not see DOMWINDOW log strings. this occurs if the DOMWINDOW logging gets disabled by something65 created seen 0 destroyed seen
[task 2020-06-12T22:24:15.173Z] 22:24:15 INFO - Buffered messages logged at 22:24:09
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1470369
Assignee | ||
Comment 3•5 years ago
|
||
Since we stopped doing minor GC at the start of every sweep slice we can now add store buffer entries while sweeping has tables as table entries get moved around. This can lead to requesting (but not performing) a minor GC inside a major GC slice.
Depends on D79702
Comment 5•5 years ago
|
||
bugherder |
Description
•