Bug 1645530 - Allow minor GC to be requested while performing major GC r=sfink

Since we stopped doing minor GC at the start of every sweep slice we can now add store buffer entries while sweeping has tables as table entries get moved around.  This can lead to requesting (but not performing) a minor GC inside a major GC slice.

Depends on D79702

Differential Revision: https://phabricator.services.mozilla.com/D79703